[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemy_model.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/EnemyMelee.gd" type="Script" id=2]
[ext_resource path="res://scripts/target.gd" type="Script" id=5]
[ext_resource path="res://scenes/crosshairLeft.png" type="Texture" id=6]
[ext_resource path="res://scenes/crosshairRight.png" type="Texture" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0.913725, 0, 1 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 1.5, 1.5 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 1.5, 1.5 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_billboard_mode = 1
albedo_texture = ExtResource( 7 )

[sub_resource type="CylinderShape" id=6]
radius = 16.0399
height = 2.13311

[sub_resource type="CapsuleShape" id=7]
radius = 0.751977
height = 1.25708

[node name="EnemyMelee" type="KinematicBody" groups=[
"Enemy",
"MeleeEnemy",
]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Armature" parent="." instance=ExtResource( 1 )]
transform = Transform( -17.5152, 1.53123e-06, 1.67117e-13, 0, -2.08798e-06, 16.0357, 1.53123e-06, 17.5152, 1.9116e-06, 0, 1.01153, -3.4679e-10 )

[node name="Polyhuman" parent="Armature" index="0"]
material/0 = SubResource( 1 )

[node name="CharPos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16219, 0 )

[node name="TargetDisplay" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21924, 0 )
script = ExtResource( 5 )

[node name="leftCrosshair" type="MeshInstance" parent="TargetDisplay"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="rightCrosshair" type="MeshInstance" parent="TargetDisplay"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="searchRange" type="Area" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2" type="CollisionShape" parent="searchRange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1.14237, 0, 1, -4.99346e-08, 0, 0.949724, 0 )
shape = SubResource( 7 )
[connection signal="body_entered" from="searchRange" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="searchRange" to="." method="_on_Area_body_exited"]

[editable path="Armature"]
